# ros1_tracetools

./: .gitignore  .travis.yml  3rd-party-licenses.txt  CHANGELOG.rst  CMakeLists.txt  CONTRITBUTING.md  LICENSE.txt  README.md  catkin.options  dependencies.rosinstall  package.xml  rosdoc.yaml  setup.py
analysis/: thread analysis.ipynb
include/tracetools/: tracetools.h
scripts/: add_actions.py  ctf_pickle_pod.py  example-run-script.sh  extract_actions.py  setup-lttng-schedtest.sh
src/tracetools/: status.cpp  test.cpp  tracetools.cpp
src/tracing/: __init__.py  ctf_converter.py  experiment.py  lttng_model.py  ros_mapping.py  trace_pandas.py
test/: test_get_ptr.cpp
tracetools/: .gitignore  CMakeLists.txt  NOTICE  README.md  mainpage.dox  package.xml  source_legal.md
tracetools/analysis/: .gitignore  autobod freenav.ipynb  delay and age.ipynb  thread analysis.ipynb
tracetools/include/tracetools/: tracetools.h  tracing_tools.h
tracetools/lttng/: tp_call.tp
tracetools/scripts/: durations.py  setup-lttng-roscpp.sh  to_pd.py
tracetools/src/tracetools/: .gitignore  status.cpp  test.cpp  tracetools.cpp  tracing_tools.cpp
tracetools/src/tracing/: __init__.py  ctf_converter.py  experiment.py  lttng_model.py  ros_mapping.py  trace_pandas.py
tracetools/src/tracing/analysis/: __init__.py
tracetools/test/: event_test.sh  test_experiment.py  test_experiment.test
