<?xml version="1.0"?>
<package format="2">
  <name>tracetools</name>
  <version>0.1.0</version>
  <description>Wrapper interface for tracing libraries</description>

  <maintainer email="ingo.luetkebohle@de.bosch.com">Ingo Luetkebohle</maintainer>
  <license>Apache 2.0</license>


  <!-- <url type="website">http://wiki.ros.org/tracetools</url> -->

  <author email="ingo.luetkebohle@de.bosch.com">Ingo Luetkebohle</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- this package does not list any dependencies, because most people 
       don't need tracing, and are just getting this is a dependency of
       other packages. See the README.md for more info on what
       you need to install if you really want to use it. -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
