<?xml version="1.0"?>
<package format="2">
  <name>tracetools</name>
  <version>0.2.1</version>
  <description>Wrapper interface for tracing libraries</description>

  <author email="ingo.luetkebohle@de.bosch.com">Ingo Luetkebohle</author>
  <maintainer email="ingo.luetkebohle@de.bosch.com">Ingo Luetkebohle</maintainer>

  <license>APLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>
  <build_depend>boost</build_depend>

  <test_depend>rosbash</test_depend>

  <!-- this package does not list LTTng dependencies, because most people
       don't need tracing, and are just getting this is a dependency of
       other packages. See the README.md for more info on what
       you need to install if you really want to use it. -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
